# opds-rs

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: validate.rs
src/: helpers.rs  lib.rs  mime.rs  schema.rs
src/v2_0/: metadata.rs  mod.rs
tests/: test-feed-archive-org.in.json  test-feed-archive-org.out.json  test-feed-opds-io.out.json
